--- a/groucho-lsh-rest/pom.xml
+++ b/groucho-lsh-rest/pom.xml
@@ -1,83 +1,72 @@
-<!-- This file is part of GROUCHO, originally developed at CNR-IASI. For 
-	more information visit: http://saks.iasi.cnr.it/tools/groucho This is free 
-	software: you can redistribute it and/or modify it under the terms of the 
-	GNU General Public License as published by the Free Software Foundation, 
-	either version 3 of the License, or (at your option) any later version. This 
-	software is distributed in the hope that it will be useful, but WITHOUT ANY 
-	WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS 
-	FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. 
-	You should have received a copy of the GNU General Public License along with 
-	this source. If not, see <http://www.gnu.org/licenses/>. -->
-
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>it.cnr.iasi.saks.groucho</groupId>
-	<artifactId>groucho-lsh-rest</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<name>groucho-lsh-rest</name>
-	<url>http://saks.iasi.cnr.it/tools/groucho</url>
-
-	<parent>
-		<groupId>it.cnr.iasi.saks.groucho</groupId>
-		<artifactId>groucho</artifactId>
-		<version>1.0-SNAPSHOT</version>
-	</parent>
-
-	<developers>
-		<developer>
-			<id>gulyx</id>
-			<name>Guglielmo De Angelis</name>
-		</developer>
-		<developer>
-			<id>brenomiranda</id>
-			<name>Breno Miranda</name>
-		</developer>
-	</developers>
-
-	<licenses>
-		<license>
-			<name>GNU General Public License (GPL ver.3)</name>
-			<url>http://www.gnu.org/licenses/gpl.txt</url>
-		</license>
-	</licenses>
-
-	<properties>
-		<lsh-invivo.version>1.0-SNAPSHOT</lsh-invivo.version>
-
-		<junit.version>4.4</junit.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<slf4j.version>1.7.12</slf4j.version>
-
-		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
-		<maven-compiler-plugin.sourcesVersion>1.8</maven-compiler-plugin.sourcesVersion>
-		<maven-compiler-plugin.targetVersion>1.8</maven-compiler-plugin.targetVersion>
-
-		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
-        
-        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
-
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>it.cnr.iasi.saks.groucho</groupId>
+    <artifactId>groucho-lsh-rest</artifactId>
+    <packaging>jar</packaging>
+    <name>groucho-lsh-rest</name>
+    <version>1.0-SNAPSHOT</version>
+    <properties>
+        <java.version>1.7</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <springfox-version>2.7.0</springfox-version>
     </properties>
-
-	<dependencies>
-		<dependency>
-			<groupId>it.cnr.iasi.saks.groucho</groupId>
-			<artifactId>lsh-invivo</artifactId>
-			<version>${lsh-invivo.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-	</dependencies>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.9.RELEASE</version>
+    </parent>
+    <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+        </dependency>
+        <!--SpringFox dependencies -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.joschi.jackson</groupId>
+            <artifactId>jackson-datatype-threetenbp</artifactId>
+            <version>2.6.4</version>
+        </dependency>
+    <!-- Bean Validation API support -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
