--- a/groucho-lsh-rest/pom.xml
+++ b/groucho-lsh-rest/pom.xml
@@ -9,23 +9,53 @@
 	You should have received a copy of the GNU General Public License along with
 	this source. If not, see <http://www.gnu.org/licenses/>. -->
 
-
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>it.cnr.iasi.saks.groucho</groupId>
-    <artifactId>groucho-lsh-rest</artifactId>
-    <name>groucho-lsh-rest</name>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <url>http://saks.iasi.cnr.it/tools/groucho</url>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>it.cnr.iasi.saks.groucho</groupId>
+	<artifactId>groucho-lsh-rest</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<name>groucho-lsh-rest</name>
+	<url>http://saks.iasi.cnr.it/tools/groucho</url>
 
     <parent>
         <groupId>it.cnr.iasi.saks.groucho</groupId>
         <artifactId>groucho</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+	<developers>
+		<developer>
+			<id>gulyx</id>
+			<name>Guglielmo De Angelis</name>
+		</developer>
+		<developer>
+			<id>brenomiranda</id>
+			<name>Breno Miranda</name>
+		</developer>
+		<developer>
+			<id>NicoloRogaiUNICAM</id>
+			<name>Nicolo Rogai</name>
+		</developer>
+	</developers>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+        <lsh-invivo.version>1.0-SNAPSHOT</lsh-invivo.version>
+	<slf4j.version>1.7.12</slf4j.version>
+        <springfox-version>2.9.2</springfox-version>
+        <spring.boot.version>2.2.6.RELEASE</spring.boot.version>
+        <junit.version>4.4</junit.version>
+        
+        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
+    </properties>
 
     <dependencyManagement>
         <dependencies>
@@ -38,47 +68,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <developers>
-    </developers>
-
-    <licenses>
-        <license>
-            <name>GNU General Public License (GPL ver.3)</name>
-            <url>http://www.gnu.org/licenses/gpl.txt</url>
-        </license>
-    </licenses>
-
-    <properties>
-        <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
-        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
-        <lsh-invivo.version>1.0-SNAPSHOT</lsh-invivo.version>
-        <springfox-version>2.9.2</springfox-version>
-        <spring.boot.version>2.2.6.RELEASE</spring.boot.version>
-        <junit.version>4.4</junit.version>
-        <sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
-    </properties>
-
-    <build>
-        <sourceDirectory>src/main/java</sourceDirectory>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencies>
         <dependency>
@@ -111,11 +100,39 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>it.cnr.iasi.saks.groucho</groupId> -->
+<!-- 			<artifactId>lsh-invivo</artifactId> -->
+<!-- 			<version>${lsh-invivo.version}</version> -->
+<!-- 		</dependency> -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
     </dependencies>
+
+    <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
