--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -358,6 +358,91 @@
 		</profile>
 		<!-- -->
 		<profile>
+			<id>osCacheExperimentsProfile</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>${maven-surefire.version}</version>
+						<configuration>
+							<skipTests>true</skipTests>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<!-- <version>NO VERSOIN FOR THE MOMENT AS IN THE PATCH FOR CROCHET</version> -->
+						<!-- <version>2.18.1</version> -->
+						<version>2.19.1</version>
+						<executions>
+							<execution>
+								<id>preliminar</id>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+								<configuration>
+<!-- 									<excludes> -->
+<!-- 									<exclude>it.cnr.iasi.saks.groucho.lab.instrument.test.it.**</exclude> -->
+<!-- 									</excludes> -->
+									<test>it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.oscache.SimpleOSCacheTest_IT</test>
+									<reuseForks>false</reuseForks>
+									<useUnlimitedThreads>true</useUnlimitedThreads>
+									<jvm>${groucho-crochet.build.directory}/jre-inst/bin/java</jvm>
+									<argLine>
+										-Xmx4G
+										-agentpath:${groucho-crochet.build.directory}/libtagging.so
+										-javaagent:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
+										-Xbootclasspath/p:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
+										@{argLine}
+										-javaagent:${groucho-lab.build.directory}/${groucho-lab.build.finalName}.jar
+										-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
+										-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfPreExperiments.properties
+										<!-- -->
+										-javaagent:${groucho-core.build.directory}/${groucho-core.build.finalName}.jar
+										-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
+										-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfPreExperiments.properties
+									</argLine>
+								</configuration>
+							</execution>
+<!-- 							<execution> -->
+<!-- 								<id>actual</id> -->
+<!-- 								<goals> -->
+<!-- 									<goal>integration-test</goal> -->
+<!-- 									<goal>verify</goal> -->
+<!-- 								</goals> -->
+<!-- 								<configuration> -->
+<!-- 									<test>it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.ShrinkerThreadJCSTest_IT</test> -->
+<!-- 									<reuseForks>false</reuseForks> -->
+<!-- 									<useUnlimitedThreads>true</useUnlimitedThreads> -->
+<!-- 									<jvm>${groucho-crochet.build.directory}/jre-inst/bin/java</jvm> -->
+<!-- 									<argLine> -->
+<!-- 										-Xmx4G -->
+<!-- 										-agentpath:${groucho-crochet.build.directory}/libtagging.so -->
+<!-- 										-javaagent:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar -->
+<!-- 										-Xbootclasspath/p:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar -->
+<!-- 										@{argLine} -->
+<!-- 										-javaagent:${groucho-lab.build.directory}/${groucho-lab.build.finalName}.jar -->
+<!-- 										-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory} -->
+<!-- 										-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties -->
+										<!-- *** -->
+<!-- 										-javaagent:${groucho-core.build.directory}/${groucho-core.build.finalName}.jar -->
+<!-- 										-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory} -->
+<!-- 										-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties -->
+<!-- 									</argLine> -->
+<!-- 								</configuration> -->
+<!-- 							</execution> -->
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<!-- -->
+		<profile>
 			<id>generateTestStubsProfile</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
