--- a/groucho-lsh-rest/pom.xml
+++ b/groucho-lsh-rest/pom.xml
@@ -81,6 +81,12 @@
             <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring.boot.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${springfox-version}</version>
@@ -100,11 +106,11 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>it.cnr.iasi.saks.groucho</groupId> -->
-<!-- 			<artifactId>lsh-invivo</artifactId> -->
-<!-- 			<version>${lsh-invivo.version}</version> -->
-<!-- 		</dependency> -->
+ 		<dependency>
+ 			<groupId>it.cnr.iasi.saks.groucho</groupId>
+ 			<artifactId>lsh-invivo</artifactId>
+ 			<version>${lsh-invivo.version}</version>
+ 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
