--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -60,6 +60,8 @@
 
 		<evosuite.version>1.0.6</evosuite.version>
 
+  		<apache-commons-io.version>2.4</apache-commons-io.version>
+
 		<groucho-core.version>1.0-SNAPSHOT</groucho-core.version>
 		<groucho-lsh-rest.version>1.0-SNAPSHOT</groucho-lsh-rest.version>
 
@@ -148,6 +150,14 @@
 			<artifactId>jcs</artifactId>
 			<version>1.3</version>
 		</dependency>
+		
+		<dependency>
+  			<groupId>org.apache.directory.studio</groupId>
+  			<artifactId>org.apache.commons.io</artifactId>
+  			<version>${apache-commons-io.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -406,7 +416,7 @@
 										-javaagent:${groucho-lab.build.directory}/${groucho-lab.build.finalName}.jar
 										-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
 										-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties
-										<!-- -->
+										<!-- -->										
 										-javaagent:${groucho-core.build.directory}/${groucho-core.build.finalName}.jar
 										-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
 										-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties
