--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -55,6 +55,7 @@
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 
 		<sonar.coverage.jacoco.xmlReportPaths>${basedir}/../${aggregate.report.dir}</sonar.coverage.jacoco.xmlReportPaths>
+		<jacoco.coverageExperiment.version>0.8.5</jacoco.coverageExperiment.version>
 
 		<mockito-core.version>3.3.3</mockito-core.version>
 
@@ -428,20 +429,166 @@
 				</plugins>
 			</build>
 		</profile>
+		<!--  -->
+	<profile>
+		<id>jacocoCoverageExperimentProfile</id>
+		<activation>
+			<activeByDefault>false</activeByDefault>
+		</activation>
+		<dependencies>
+			<dependency>
+				<groupId>opensymphony</groupId>
+				<artifactId>oscache</artifactId>
+				<version>2.1.1</version>
+				<scope>system</scope>
+				<systemPath>${groucho-lab.build.directory}/../src/test/resources/lib/fat-jars/oscache-2.1.1-fat.jar</systemPath>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.jcs</groupId>
+				<artifactId>jcs</artifactId>
+				<version>1.3</version>
+				<scope>system</scope>
+				<systemPath>${groucho-lab.build.directory}/../src/test/resources/lib/fat-jars/jcs-1.3-fat.jar</systemPath>
+			</dependency>
+			<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>concurrent</groupId>
+				<artifactId>concurrent</artifactId>
+				<version>1.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jacoco</groupId>
+				<artifactId>org.jacoco.agent</artifactId>
+				<classifier>runtime</classifier>
+				<version>${jacoco.coverageExperiment.version}</version>
+			</dependency>
+		</dependencies>
+		<build>
+			<plugins>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${jacoco.coverageExperiment.version}</version>
+					<executions>
+						<!-- NOTE THAT AUTOMATIC REPORTTING IS USELESS, AS THE SOURCE FILES OF THE JARS: jcsAND oscache ARE NEEDED: -->
+						<!-- GENERATE THE REPORTS OFFLINE AS DESCRIBED IN  jacocolibSnippets.txt -->
+						<execution>
+							<id>jacoco-no-invivo</id>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+							<configuration>
+								<!-- <destfile>${groucho-lab.build.directory}/jacoco-no-invivo.exec</destfile> -->
+								<!-- <propertyName>surefireArgLine</propertyName> -->
+							</configuration>
+						</execution>
+						<execution>
+							<id>jacoco-invivo</id>
+							<goals>
+								<goal>prepare-agent-integration</goal>
+							</goals>
+							<configuration>
+								<!-- <destfile>${groucho-lab.build.directory}/jacoco-invivo.exec</destfile> -->
+								<!-- <propertyName>failsafeArgLine</propertyName> -->
+							</configuration>
+						</execution>
+					</executions>
+					<configuration>
+						<includes>
+						<!-- NOTE THAT THIS INCLUDES ARE NOT CONSULTED, AS AUTOMATIC REPORTTING IS DISABLED (see above). -->
+						<!-- THE INTENT OF THESE STATEMENTS IS ONLY TO DOCUMENT THE CLASSES THAT MAY BE INTERESTING FOR THIS EXPERIMENT. -->
+							<include>com/opensymphony/oscache/base/algorithm/AbstractConcurrentReadCache.class</include>
+							<include>com/opensymphony/oscache/base/algorithm/LRUCache.class</include>
+							<include>org/apache/jcs/engine/memory/lru/LRUMemoryCache.class</include>
+							<include>org/apache/jcs/engine/memory/shrinking/ShrinkerThread.class</include>
+						</includes>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire.version}</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>test</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<reuseForks>false</reuseForks>
+						<useUnlimitedThreads>true</useUnlimitedThreads>
+						<test>ch.usi.precrime.lrucache.LRUCacheTest,
+							it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.test.ShrinkerThreadUnitTest</test>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<!-- <version>NO VERSOIN FOR THE MOMENT AS IN THE PATCH FOR CROCHET</version> -->
+					<!-- <version>2.18.1</version> -->
+					<version>2.19.1</version>
+					<executions>
+						<execution>
+							<id>actual</id>
+							<goals>
+								<goal>integration-test</goal>
+								<goal>verify</goal>
+							</goals>
+							<configuration>
+								<test>it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.oscache.LRUCacheOSCacheTest_IT,
+									it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.ShrinkerThreadJCSTest_IT</test>
+								<reuseForks>false</reuseForks>
+								<useUnlimitedThreads>true</useUnlimitedThreads>
+								<jvm>${groucho-crochet.build.directory}/jre-inst/bin/java</jvm>
+								<argLine>
+									-Xmx4G
+									-agentpath:${groucho-crochet.build.directory}/libtagging.so
+									-javaagent:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
+									-Xbootclasspath/p:${groucho-crochet.build.directory}/${groucho-crochet.build.finalName}.jar
+									@{argLine}
+									-javaagent:${groucho-lab.build.directory}/${groucho-lab.build.finalName}.jar
+									-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
+									-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties
+									<!-- -->
+									-javaagent:${groucho-core.build.directory}/${groucho-core.build.finalName}.jar
+									-Xbootclasspath/p:${groucho-lab.build.depencenciesDirectory}
+									-Dgroucho.config.file.location=${groucho-lab.build.directory}/../src/test/resources/testingConfExperiments.properties
+									<!-- -->
+								</argLine>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>
 		<!-- -->
 		<profile>
 			<id>generateTestStubsProfile</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
+			<dependencies>
+				<dependency>
+    				<groupId>commons-collections</groupId>
+    				<artifactId>commons-collections</artifactId>
+    				<version>3.2.2</version>
+				</dependency>
+         	</dependencies>
 			<properties>
 <!-- 				<cuts>com.opensymphony.oscache.web.filter.CacheFilter, com.opensymphony.oscache.base.algorithm.AbstractConcurrentReadCache</cuts> -->
-				<cuts>com.opensymphony.oscache.base.algorithm.AbstractConcurrentReadCache</cuts>
+<!-- 				<cuts>com.opensymphony.oscache.base.algorithm.AbstractConcurrentReadCache</cuts> -->
+				<cuts>com.opensymphony.oscache.base.algorithm.LRUCache</cuts>				
 				<targetFolder>${basedir}/../groucho-lab/src/extra/test</targetFolder>
 <!-- 				<criterion>LINE</criterion> -->
-				<criterion>BRANCH</criterion>
+<!-- 				<criterion>BRANCH</criterion> -->
 <!-- 				<criterion>OUTPUT:BRANCH</criterion> -->
-<!-- 				<criterion>METHOD:OUTPUT:CBRANCH</criterion> -->
+				<criterion>METHOD:OUTPUT:CBRANCH</criterion>
 <!-- 				<criterion>LINE:BRANCH:METHOD:OUTPUT:CBRANCH</criterion> -->
 <!-- 				<criterion>LINE:BRANCH:METHOD</criterion> -->
 <!-- 				<criterion>CBRANCH</criterion> -->
