binded the new test in SURFIRE for the profile: jacocoCoverageExperimentProfile

--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -522,8 +522,10 @@
 					<configuration>
 						<reuseForks>false</reuseForks>
 						<useUnlimitedThreads>true</useUnlimitedThreads>
+<!-- 						<test>ch.usi.precrime.lrucache.LRUCacheTest, -->
+<!-- 							it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.test.ShrinkerThreadUnitTest</test> -->
 						<test>ch.usi.precrime.lrucache.LRUCacheTest,
-							it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.test.ShrinkerThreadUnitTest</test>
+							it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.test.ShrinkerThreadLRUCacheUnitTest</test>
 					</configuration>
 				</plugin>
 				<plugin>
