--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -526,7 +526,7 @@
 <!-- 						<test>ch.usi.precrime.lrucache.LRUCacheTest, -->
 <!-- 							it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.test.ShrinkerThreadUnitTest</test> -->
 						<test>ch.usi.precrime.lrucache.LRUCacheTest,
-							it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.test.ShrinkerThreadLRUCacheUnitTest</test>
+							it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.test.ShrinkerThreadLRUCacheUnitTest#testSimpleShrinkMutiple</test>
 					</configuration>
 				</plugin>
 				<plugin>
