Configured jacocoCoverageExperimentProfile so that to launch just one test in ShrinkerThreadLRUCacheUnitTest during SUREFIRE. This configuration is in line with the invivo testing enabled during FAILSAFE.

--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -523,10 +523,10 @@
 					<configuration>
 						<reuseForks>false</reuseForks>
 						<useUnlimitedThreads>true</useUnlimitedThreads>
-						<test>ch.usi.precrime.lrucache.LRUCacheTest,
-							it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.test.ShrinkerThreadUnitTest</test>
 <!-- 						<test>ch.usi.precrime.lrucache.LRUCacheTest, -->
-<!-- 							it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.test.ShrinkerThreadLRUCacheUnitTest#testSimpleShrinkMutiple</test> -->
+<!-- 							it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.test.ShrinkerThreadUnitTest</test> -->
+						<test>ch.usi.precrime.lrucache.LRUCacheTest,
+							it.cnr.iasi.saks.groucho.lab.instrument.test.experiments.jcs.test.ShrinkerThreadLRUCacheUnitTest#testSimpleShrinkMutiple</test>
 					</configuration>
 				</plugin>
 				<plugin>
