--- a/groucho-lab/pom.xml
+++ b/groucho-lab/pom.xml
@@ -153,6 +153,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.biojava</groupId>
+			<artifactId>biojava-structure</artifactId>
+			<version>5.4.0</version>
+		</dependency>
+		
+		<dependency>
   			<groupId>org.apache.directory.studio</groupId>
   			<artifactId>org.apache.commons.io</artifactId>
   			<version>${apache-commons-io.version}</version>
